<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.news.NewsDetail">

        <TextView
            android:id="@+id/news_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/newsTitle"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline4" />

        <ImageView
            android:id="@+id/news_detail_image"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_gravity="center"
            android:contentDescription="@string/newsImage"
            app:srcCompat="@drawable/pnj" />

        <TextView
            android:id="@+id/news_detail_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/dummy_text_120" />

        <Button
            android:id="@+id/news_detail_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="back" />
    </LinearLayout>
</ScrollView>